--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,10 @@
+#root {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
 .barley-wrapper {
     width: 720px;
     height: 720px;
@@ -36,10 +43,7 @@
 .barley-cell:nth-child(16) {
     border-bottom-right-radius: 12px;
 }
-.barley-cell:nth-child(4),
-.barley-cell:nth-child(8),
-.barley-cell:nth-child(12),
-.barley-cell:nth-child(16) {
+.barley-cell:nth-child(4n)  {
     border-right: none;
 }
 .barley-cell:nth-child(13),
@@ -59,4 +63,27 @@
     font-family: Calibri;
     font-weight: bold;
     color: #ef6363;
+}
+
+@media all and (max-width: 1024px) {
+    .barley-wrapper {
+        margin-top: 10px;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .barley-wrapper {
+        margin: 0;
+        height: auto;
+        width: 100%;
+    }
+    .barley-body {
+        height: 100vw;
+    }
+    .barley-cell {
+        font-size: 21px;
+    }
+
 }
